[package]
name = "flamer"
version = "0.2.3"
authors = ["Andre Bogus <bogusandre@gmail.com>"]
description = "a procedural macro to insert `flame::start_guard(_)` calls"
license = "Apache-2.0"
repository = "https://github.com/llogiq/flamer"
readme = "README.md"
keywords = ["flame-graph", "profiling", "compiler-plugin"]

[lib]
plugin = true

[dependencies]
flame = "0.2.2"
