[package]
name = "flamer"
version = "0.4.0"
authors = ["Andre Bogus <bogusandre@gmail.com>"]
description = "a procedural macro to insert `flame::start_guard(_)` calls"
license = "Apache-2.0"
repository = "https://github.com/llogiq/flamer"
readme = "README.md"
keywords = ["flame-graph", "profiling", "compiler-plugin"]
exclude = [".travis.yml"]

[lib]
proc_macro = true

[dependencies]
flame = "0.2.2"
syn = { version = "1.0.1", features = ["extra-traits", "full", "fold", "parsing"] }
quote = "1.0.0"

[features]
# WARNING: This Cargo feature is not intended for public usage!
# Used to test `flamer` for module support which currently requires nightly
# Rust.
test-nightly = []
